# envlock

./: .env.vault  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml
.envlock/: identity.txt  recipients.txt
.github/workflows/: release.yml
src/: config.rs  crypto.rs  gitignore.rs  lib.rs  main.rs
src/commands/: check.rs  ci_export.rs  ci_run.rs  ci_seal.rs  decrypt.rs  diff.rs  doctor.rs  edit.rs  encrypt.rs  hook.rs  init.rs  mod.rs  recipients.rs  rotate.rs  run.rs
